# TaskHub

./: API.md  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  README.md  dag_abcd_test.sh  docker-compose.yml  docker_up.sh  docker_up_all.sh  docker_up_workers_host_master.sh  m10.sh  m11_3.sh  m11_4.sh  m11_7_dispatch_retry_check.sh  m12_6_checklist.md  m13.sh  m14_dag_template_worker_check.sh  m7.sh  m7_min.sh  m8.sh  node_task_formats.md  seed_templates.sh  stoc_architecture.md  taskhub.db  testM13_1.cpp  testM13_2.cpp  ws_test.html  线程池.md
client/: CMakeLists.txt
client/src/: main.cpp
client/src/Item/: arrow_line_item.cpp  arrow_line_item.h  base_item.cpp  base_item.h  container_rect_item.cpp  container_rect_item.h  dag_rect_item.cpp  dag_rect_item.h  http_rect_item.cpp  http_rect_item.h  line_item.cpp  line_item.h  line_item_factory.cpp  line_item_factory.h  local_rect_item.cpp  local_rect_item.h  node_item_factory.cpp  node_item_factory.h  node_type.h  rect_item.cpp  rect_item.h  remote_rect_item.cpp  remote_rect_item.h  shell_rect_item.cpp  shell_rect_item.h  template_rect_item.cpp  template_rect_item.h
client/src/commands/: cmd_add_edge.cpp  cmd_add_edge.h  cmd_add_node.cpp  cmd_add_node.h  cmd_move_node.cpp  cmd_move_node.h  command.cpp  command.h  create_command.cpp  create_command.h  undostack.cpp  undostack.h
client/src/core/: app_context.cpp  app_context.h  http_client.cpp  http_client.h  task_ws_client.cpp  task_ws_client.h
client/src/editor/: editor_controller.cpp  editor_controller.h
client/src/factory/: edge_factory.cpp  edge_factory.h  item_factory.h  node_factory.cpp  node_factory.h
client/src/graph/: graph_model.cpp  graph_model.h  graph_types.h
client/src/models/: task_item.h  task_list_model.cpp  task_list_model.h
client/src/net/: api_client.cpp  api_client.h  ws_client.cpp  ws_client.h
client/src/operator/: base_operator.cpp  base_operator.h  create_rect_operator.h
client/src/resources/: icons.qrc
client/src/tasks/: connect_task.cpp  connect_task.h  create_task.cpp  create_task.h  delete_task.cpp  delete_task.h  edit_node_task.cpp  edit_node_task.h  import_task.cpp  import_task.h  layout_task.cpp  layout_task.h  main_task.cpp  main_task.h  move_task.cpp  move_task.h  select_task.cpp  select_task.h  straight_line_task.cpp  straight_line_task.h  task.cpp  task.h  task_manager.cpp  task_manager.h  zoom_task.cpp  zoom_task.h
client/src/ui/: console_dock.cpp  console_dock.h  login_dialog.cpp  login_dialog.h  main_window.cpp  main_window.h  main_window.ui  main_windows.ui  new_task_dialog.cpp  new_task_dialog.h  new_task_dialog.ui  taskdetaildialog.cpp  taskdetaildialog.h  taskdetaildialog.ui  user_bar_widget.cpp  user_bar_widget.h
client/src/utils/: id_utils.h
client/src/view/: body_editor_dialog.h  canvasbench.cpp  canvasbench.h  canvasscene.cpp  canvasview.cpp  canvasview.h  cron_jobs_widget.cpp  dag_edit_bench.cpp  dag_edit_bench.h  dag_inspector_widget.cpp  dag_inspector_widget.h  dag_loader.cpp  dag_loader.h  dag_run_monitor_dialog.cpp  dag_run_monitor_dialog.h  dag_run_viewer.cpp  dag_run_viewer.h  dag_runs_widget.cpp  dag_runs_widget.h  dag_serializer.cpp  dag_serializer.h  graph_view_adapter.h  headers_editor_dialog.h  inspector_panel.cpp  inspector_panel.h  node_inspector_action_widget.cpp  node_inspector_action_widget.h  node_inspector_common_widget.cpp  node_inspector_common_widget.h  node_inspector_dag_widget.cpp  node_inspector_dag_widget.h  node_inspector_http_widget.cpp  node_inspector_http_widget.h  node_inspector_local_widget.cpp  node_inspector_local_widget.h  node_inspector_remote_widget.cpp  node_inspector_remote_widget.h  node_inspector_runtime_widget.cpp  node_inspector_runtime_widget.h  node_inspector_shell_widget.cpp  (+15 more)
server/: CMakeLists copy.txt  CMakeLists.txt
server/config/: default_config.json
server/docs/: db_migrations.md
server/migrations/: 001_v1_0_0_init.sql  002_v1_0_1_add_task_fields.sql  003_v1_0_2_add_template.sql  004_v1_0_3_add_run_tables.sql  005_v1_0_4_add_events_and_dag_name.sql  006_v1_0_5_add_schema_to_task_template.sql
server/src/: main.cpp  router.cpp  router.h  server_app.cpp  server_app.h
server/src/auth/: user.h
server/src/core/: auth_manager.cpp  auth_manager.h  blocking_queue.h  config.cpp  config.h  http_response.h  log_formatter.cpp  log_manager.cpp  log_manager.h  log_record.h  log_rotation.h  log_sink.h  log_sink_console.cpp  logger.cpp  logger.h  task.h  task_log_buffer.cpp  task_log_buffer.h  task_manager.cpp  task_manager.h  task_runner.cpp  task_runner.h  utils.cpp  utils.h  utils_exec.cpp  utils_exec.h  worker_pool.cpp  worker_pool.h  ws_hub.cpp  ws_hub.h  ws_log_streamer.cpp  ws_log_streamer.h  ws_protocol.h  ws_server_beast.cpp  ws_server_beast.h  ws_task_events.h
server/src/dag/: dag_builder.cpp  dag_builder.h  dag_executor.cpp  dag_executor.h  dag_graph.cpp  dag_graph.h  dag_node.cpp  dag_node.h  dag_run_context.cpp  dag_run_context.h  dag_run_utils.h  dag_service.cpp  dag_service.h  dag_thread_pool.cpp  dag_thread_pool.h  dag_types.h
server/src/db/: dag_run_repo.cpp  dag_run_repo.h  db.cpp  db.h  migrator.cpp  migrator.h  task_event_repo.cpp  task_event_repo.h  task_run_repo.cpp  task_run_repo.h
server/src/execution/: dag_strategy.cpp  dag_strategy.h  execution_registry.cpp  execution_registry.h  execution_strategy.h  http_strategy.cpp  http_strategy.h  local_strategy.cpp  local_strategy.h  remote_strategy.cpp  remote_strategy.h  script_strategy.cpp  script_strategy.h  shell_strategy.cpp  shell_strategy.h  template_strategy.cpp  template_strategy.h
server/src/handlers/: auth_handler.cpp  auth_handler.h  cron_handler.cpp  cron_handler.h  handlers.h  log_handler.cpp  log_handler.h  system_handler.cpp  system_handler.h  task_handler.cpp  task_handler.h  task_template_handler.cpp  task_template_handler.h  template_handler.cpp  template_handler.h  worker_handler.cpp  worker_handler.h
server/src/log/: log_formatter.cpp  log_formatter.h  log_manager.cpp  log_manager.h  log_record.h  log_rotation.cpp  log_sink_console.cpp  log_sink_console.h  logger.h  (+5 more)
(+105 files in other folders)
